--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@daily-co/daily-js": "^0.79.0",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
     "cors": "^2.8.5",
