--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@daily-co/daily-js": "^0.79.0",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
     "cors": "^2.8.5",
@@ -20,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "react-scroll": "^1.9.3",
+    "react-square-web-payments-sdk": "^3.2.4-beta.1",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
