--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@daily-co/daily-js": "^0.79.0",
+    "@daily-co/daily-react": "^0.22.0",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.12.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "lucide-react": "^0.511.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "react-scroll": "^1.9.3",
