--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -5,3 +5,11 @@ Flask-Migrate
 Flask-JWT-Extended
 dotenv
 squareup
+flask==2.0.1
+flask-cors==3.0.10
+flask-socketio==5.1.1
+python-socketio==5.4.0
+python-engineio==4.2.1
+werkzeug==2.0.1
+uuid==1.30
+fs==2.4.16
