--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -13,3 +13,10 @@ python-engineio==4.2.1
 werkzeug==2.0.1
 uuid==1.30
 fs==2.4.16
+python-dotenv==0.19.0
+psycopg2-binary==2.9.1
+gunicorn==20.1.0
+python-jose==3.3.0
+bcrypt==3.2.0
+requests==2.26.0
+eventlet==0.33.0
