--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.12.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
